--- a/index.ipynb
+++ b/index.ipynb
@@ -98,7 +98,7 @@
    "outputs": [],
    "source": [
     "# Your observations about the relationship between X and Y \n",
-    "# Positi\n",
+    "# Positive relationship between the \n",
     "\n",
     "\n",
     "#"
