--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,7 @@
     "# (mean(x) * mean(y) – mean(x*y)) / ( mean (x)^2 – mean( x^2))\n",
     "def calc_slope(xs,ys):\n",
     "    \n",
-    "    \n",
+    "    xs.mean() - \n",
     "    pass\n",
     "\n",
     "calc_slope(X,Y)\n",
