--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,7 @@
     "# (mean(x) * mean(y) – mean(x*y)) / ( mean (x)^2 – mean( x^2))\n",
     "def calc_slope(xs,ys):\n",
     "    \n",
-    "    np.mean(xs) - np\n",
+    "    np.mean(xs) - np.mean(yx) - np.\n",
     "    pass\n",
     "\n",
     "calc_slope(X,Y)\n",
