--- a/index.ipynb
+++ b/index.ipynb
@@ -167,7 +167,7 @@
     "# use the slope function with intercept formula to return calculate slope and intercept from data points\n",
     "\n",
     "def best_fit(xs,ys):\n",
-    "    m = calc_slope()\n",
+    "    m = calc_slope(xs,ys)\n",
     "    \n",
     "\n",
     "# Uncomment below to test your function\n",
