--- a/index.ipynb
+++ b/index.ipynb
@@ -168,6 +168,7 @@
     "\n",
     "def best_fit(xs,ys):\n",
     "    m = calc_slope(xs,ys)\n",
+    "    c = np.mean()\n",
     "    \n",
     "\n",
     "# Uncomment below to test your function\n",
