Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -168,7 +168,7 @@
     "\n",
     "def best_fit(xs,ys):\n",
     "    m = calc_slope(xs,ys)\n",
-    "    c = np.mean()\n",
+    "    c = np.mean(ys) - np.mean\n",
     "    \n",
     "\n",
     "# Uncomment below to test your function\n",
