--- a/index.ipynb
+++ b/index.ipynb
@@ -169,7 +169,7 @@
     "def best_fit(xs,ys):\n",
     "    m = calc_slope(xs,ys)\n",
     "    c = np.mean(ys) - m*np.mean(ys)\n",
-    "    return c\n",
+    "    return m,c\n",
     "    \n",
     "\n",
     "# Uncomment below to test your function\n",
