--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,7 @@
    "source": [
     "def reg_line (m, c, xs):\n",
     "    \n",
-    "    pass\n",
+    "    return [(m)]\n",
     "\n",
     "# Uncomment below\n",
     "#regression_line = reg_line(m,c,X)"
