Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
     "    return [(m*x)+c for x in xs]\n",
     "\n",
     "# Uncomment below\n",
-    "#regression_line = reg_line(m,c,X)"
+    "regression_line = reg_line(m,c,X)"
    ]
   },
   {
@@ -231,7 +231,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot data and regression line"
+    "# Plot data and regression line\n",
+    "sns.plot"
    ]
   },
   {
