--- a/index.ipynb
+++ b/index.ipynb
@@ -227,16 +227,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f268a7f0c18>"
+       "<matplotlib.legend.Legend at 0x7f268a772fd0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
