Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "0.5393518518518512"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,10 @@
     "# (mean(x) * mean(y) – mean(x*y)) / ( mean (x)^2 – mean( x^2))\n",
     "def calc_slope(xs,ys):\n",
     "    \n",
-    "    return ((np.mean(xs) * np.mean(ys) - np.mean(xs * ys)) / (np.mean(xs)**2 - np.mean(xs * xs)))\n",
+    "    m = (((np.mean(xs)*np.mean(ys)) - np.mean(xs*ys)) /\n",
+    "         ((np.mean(xs)**2) - np.mean(xs*xs)))\n",
+    "    \n",
+    "    return m\n",
     "    \n",
     "\n",
     "calc_slope(X,Y)\n",
@@ -160,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +172,7 @@
        "(0.5393518518518512, 6.379629629629633)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,16 +230,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f268a772fd0>"
+       "<matplotlib.legend.Legend at 0x7f268a6f1630>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
