--- a/index.ipynb
+++ b/index.ipynb
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "(0.5393518518518512, 6.379629629629633)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,9 +181,12 @@
     "# use the slope function with intercept formula to return calculate slope and intercept from data points\n",
     "\n",
     "def best_fit(xs,ys):\n",
+    "    \n",
+    "    # use the slope function with intercept formula to return calculate slope and intercept from data points\n",
     "    m = calc_slope(xs,ys)\n",
-    "    c = np.mean(ys) - m*np.mean(ys)\n",
-    "    return m,c\n",
+    "    c = np.mean(ys) - m*np.mean(xs)\n",
+    "    \n",
+    "    return m, c\n",
     "    \n",
     "\n",
     "# Uncomment below to test your function\n",
