--- a/index.ipynb
+++ b/index.ipynb
@@ -303,12 +303,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.155092592592592"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x_new = 7\n",
-    "y_predicted = None\n",
+    "y_predicted = (m*x_new)+c\n",
     "y_predicted\n",
     "\n",
     "# 10.155092592592592"
